# delphy-2026-paper-data

./: .gitignore  README.md  extract_fasta_dates.py  requirements.txt  setup_default_links.sh
ebola-dudas-2017/: 00_prepare_runs.py  01_make_beast_inputs.sh  02a_run_delphy.sh  02b_run_delphy.sh  03a_run_beastX.sh  03b_run_beastX.sh  04_make_beast_inputs_alpha.sh  05a_run_delphy_alpha.sh  05b_run_delphy_alpha.sh  06a_run_beastX_alpha.sh  06b_run_beastX_alpha.sh  07_prepare_ml.sh  08_run_ml.sh  09_run_ml_alpha.sh  20_plot_trees.py  21_plot_histograms.py  22_plot_esss.py  30_compare_clades.py  31_compare_clades_compact.py  32_suspicious_clades.py  99_stats.py  (+1 more)
tree_ess/: CLAUDE.md  Cargo.toml
tree_ess/plans/: 2025-02-26-01-clade-coverage-calculator.md  2025-02-27-02-calc-tree-ess-use-cladefp.md  2025-02-27-03-extract-cladefp-to-library.md  2025-02-27-04-extract-assign-tip-fps.md  2025-02-27-05-extract-calc-rf-dist.md  2025-02-27-06-extract-ess-computation.md  2025-02-27-07-extract-date-parsing.md  2025-02-27-08-extract-clade-map.md  2025-02-27-09-simplify-find-root-date.md  2025-02-27-10-remove-clade-size.md  2025-02-27-11-separate-clade-concerns.md  2025-02-27-12-single-clade-map-in-coverage.md  2025-02-27-13-gate-dead-tree-code.md  2025-02-27-14-remove-tipclade-fp.md  2025-02-27-refactor-burnin.md
tree_ess/src/: burnin.rs  clade_fp.rs  clades.rs  dates.rs  ess.rs  lib.rs  nexus_reader.rs  trees.rs
tree_ess/src/newick/: lexer.rs  mod.rs  parser.rs
tree_ess/src/refs/: heavy_light_refs.rs  light_light_refs.rs  mod.rs
tree_ess/testdata/: onetree.nexus  twotrees.trees
(+15551 files in other folders)
